# runeterra-deck-tracker

./: Cargo.toml  README.md
runeterra-core/: Cargo.toml
runeterra-core/src/: card.rs  collection.rs  deck.rs  error.rs  lib.rs
runeterra-core/tests/: basic.rs
runeterra-database/: Cargo.toml
runeterra-database/resources/en_us/data/: globals-en_us.json
runeterra-database/src/: database.rs  lib.rs
runeterra-database/tests/: basic.rs
runeterra-game-api/: Cargo.toml  README.md
runeterra-game-api/examples/: basic.rs
runeterra-game-api/src/: client.rs  error.rs  lib.rs
