[package]
name = "runeterra-core"
version = "0.1.0"
authors = ["Iulian Gabriel Radu <iulian.radu67@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
runeterra-database = { path = "../runeterra-database" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.16.0"
strum_macros = "0.16.0"
lazy_static = "1.4.0"
thiserror = "1.0"
