[package]
name = "runeterra-game-api"
version = "0.1.0"
authors = ["Iulian Gabriel Radu <iulian.radu67@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10.0-alpha.2", features = ["json"] }
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = "0.2.0-alpha.6"
mockito = "0.22.0"
