[package]
name = "runeterra-game-api"
description = "Legends of Runeterra Game Client API"
homepage = "https://github.com/iulianR/runeterra-deck-tracker/tree/master/runeterra-game-api"
repository = "https://github.com/iulianR/runeterra-deck-tracker/tree/master/runeterra-game-api"
documentation = "https://docs.rs/runeterra-game-api"
license = "MIT"
readme = "README.md"
keywords = ["riot-games", "runeterra", "legends-of-runeterra"]
version = "0.1.0"
authors = ["Iulian Gabriel Radu <iulian.radu67@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10.0-alpha.2", features = ["json"] }
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "0.2.6", features = ["macros"] }
mockito = "0.22.0"
